# udata-front

./: .editorconfig  .env  .gitignore  .parcelrc  .postcssrc  .pre-commit-config.yaml  CHANGELOG.md  README.md  babel.cfg  bumpr.rc  crowdin.yml  cypress.config.js  lighthouserc.js  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tasks.py  test-runner-jest.config.js  tsconfig.json  vite.config.dev.ts  vite.config.js  vite.config.ts  vue-i18n-extract.config.js
.circleci/: config.yml
.lighthouseci/: front-plugin-udata.cfg  lighthouserc.js
.storybook/: custom-runner.js  load-theme-preview-preset.js  main.js  main.ts  msw-requests.ts  preview-head.html  preview.js  preview.ts
cypress/: cypress.config.js  udata-front-e2e.cfg.example
cypress/e2e/: a11y.cy.js  datasets.cy.js  discussions.cy.js  home.cy.js  menu-search.cy.js  register.cy.js  search.cy.js
cypress/fixtures/: dataset.json  organization.json
cypress/integration/: a11y.js  home.js  pagination.js  register.js  search.js
cypress/plugins/: index.js
cypress/support/: e2e.js
requirements/: develop.in  develop.pip  install.in  install.pip  test.in  test.pip  udata.in  udata.pip
theme/js/: config.js  dsfr.js  helpers.js  index.js  markdown.js
theme/js/api/: captcha.js  licenses.js  mcp.js  resources.js  schemas.js
theme/js/components/charts/: chart.vue
theme/js/components/dataset/: card-lg.vue  card.vue  preview.vue  quality-item.vue  quality-score.vue  schema-modal.vue  search-result.vue
theme/js/components/discussions/: author.vue  avatar.vue  thread-reply.vue  thread.vue  threads-create-button.vue  threads-create.vue  threads.vue
theme/js/components/organization/: organization-name-with-certificate.vue  request-membership.vue
theme/js/components/pagination/: pagination.vue
theme/js/components/reuse/: card.vue
theme/js/components/search/: MultiSelect.vue  empty.vue  menu-search-option.vue  menu-search.vue  multi-select.vue  rangepicker.vue  schema-filter.vue  search-input.vue  search.vue  suggest-box.vue  suggest-results.vue  suggestor.vue
theme/js/components/utils/: capcha.vue  captcha.vue  featured.vue  follow-button.vue  mcp-button.vue  placeholder.vue  read-more.vue  search-bar.vue  tooltip.vue
theme/js/components/vanilla/: accordion.js  clipboard.js  sort-search.js  tabs.js  update-url.js
theme/js/composables/: useActiveDescendant.js  useBreakpoints.js  useCollapse.js  useComponentsForHook.js  useDebouncedRef.js  useKeyCodes.js  useLicense.js  useOrganizationCertified.js  useOwned.js  useOwnerName.js  useResourceImage.js  useSchema.js  useSearchUrl.js  useUserAvatar.js
theme/js/locales/: en.json  es.json  fr.json  it.json  pt.json  sr.json
theme/js/mixins/: scrollable.vue
theme/js/plugins/: api.js  auth.js  eventbus.js  filters.js  i18n.js  modals.js
theme/less/: examples.css  icons.less  index.less  override.less  style.less
theme/less/components/: accordion.less  animations.less  badge.less  borders.less  buttons.less  callout.less  card.less  dataset.less  discussions.less  dropdown.less  follow-button.less  forms.less  highlight.less  logo.less  markdown.less  multiselect.less  pagination.less  quote.less  rangepicker.less  read-more.less  reuse.less  search-input.less  sidemenu.less  suggestor.less  summary.less  table.less  tabs.less  tags.less  tile.less  toast.less  tooltip.less  well.less
theme/less/content/: callouts.less  colors.less  links.less  typography.less  visibility.less
theme/less/layout/: grid.less  responsive.less  rhythm.less
theme/less/specific/: header.less  metadata.less  oembed.less  organization.less  resource-card.less  reuse.less  search.less  suggest.less
udata-front/: package-lock.json  package.json
udata-front-plugins-helper/: .postcssrc  README.md  package-lock.json  package.json  postcss.config.js  tsconfig.json  vite.config.js  vite.config.ts
udata-front-plugins-helper/src/: env.d.ts  hook.js  index.js  index.ts  paginate.js  pagination.js  pagination.vue
udata-front-plugins-helper/test/: Pagination.spec.js  hook.test-d.ts  hook.test.js  index.test-d.ts  paginate.test-d.ts  paginate.test.js
udata-front/src/: index.js
udata_front/: __init__.py  api.py  forms.py  settings.py  tasks.py
udata_front/frontend/: __init__.py  helpers.py  markdown.py  menu_helpers.py  resource_helpers.py
udata_front/harvesters/: maaf.py
udata_front/tests/: test_api.py  test_discussions.py  test_forms.py  test_security.py  test_sitemap.py  test_static_pages.py  tests.py
udata_front/tests/frontend/: test_frontend_filters.py
udata_front/tests/views/: test_dataset.py  test_oembed.py  test_organization.py  test_reuse.py  test_security.py  test_site.py  test_territories.py  test_topic.py  test_user.py
udata_front/theme/: __init__.py
udata_front/theme/gouvfr/: __init__.py  babel.cfg
udata_front/theme/gouvfr/assets/: README.md  index.html  package-lock.json  package.json  tsconfig.json  (+1 more)
udata_front/views/: agentconnect.py  base.py  beta.py  dataservice.py  dataset.py  gouvfr.py  mcp.py  oauth.py  oembed.py  organization.py  proconnect.py  reuse.py  schema.py  site.py  territories.py  user.py  utils.py
(+903 files in other folders)
